--- a/build.gradle
+++ b/build.gradle
@@ -130,11 +130,11 @@ test {
 }
 
 task installDependencies(type: Exec, description: 'Installs Yarn dependencies.') {
-  commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', '--silent', 'install'
+  commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', 'install', '> /dev/null'
 }
 
 task checkDependenciesIntegrity(type: Exec, description: 'Checks integrity of Yarn dependencies.') {
-  commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', '--silent', 'check', '--integrity'
+  commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', 'check', '--integrity', '> /dev/null'
 }
 
 task awaitApplicationReadiness(type: Exec, description: 'Awaits until application is ready.') {
@@ -146,39 +146,39 @@ task runCosTests(type: Exec, description: 'Runs DJ Api functional tests.') {
   onlyIf {
     return System.env.ENVIRONMENT == 'preview'
   }
-  commandLine '/usr/bin/yarn', '--silent', 'test:api-cos'
+  commandLine '/usr/bin/yarn', 'test:api-cos', '> /dev/null'
 }
 
 task runSdoApiTests(type: Exec, description: 'Runs SDO functional tests.') {
   onlyIf {
     return System.env.ENVIRONMENT == 'preview'
   }
-  commandLine '/usr/bin/yarn', '--silent', 'test:api-sdo'
+  commandLine '/usr/bin/yarn', 'test:api-sdo', '> /dev/null'
 }
 
 task runSmokeTests(type: Exec, description: 'Runs smoke tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:smoke'
+  commandLine '/usr/bin/yarn', 'test:smoke', '> /dev/null'
 }
 
 task runDJTests(type: Exec, description: 'Runs DJ Api functional tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:api-dj'
+  commandLine '/usr/bin/yarn', 'test:api-dj', '> /dev/null'
 }
 
 task runSpecApiTests(type: Exec, description: 'Runs Spec functional tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:api-spec'
+  commandLine '/usr/bin/yarn', 'test:api-spec', '> /dev/null'
 }
 
 task runApiTests(type: Exec, description: 'Runs Api functional tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:api-unspec'
+  commandLine '/usr/bin/yarn', 'test:api-unspec', '> /dev/null'
 }
 
 
 task runRpaHandOffTests(type: Exec, description: 'Runs functional tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:rpa'
+  commandLine '/usr/bin/yarn', 'test:rpa', '> /dev/null'
 }
 
 task runNightlyMultipartyTests(type: Exec, description: 'Runs additional multiparty nightly tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:nightly-multiparty'
+  commandLine '/usr/bin/yarn', 'test:nightly-multiparty', '> /dev/null'
 }
 
 def inStrictOrder(Task... tasks) {
