--- a/build.gradle
+++ b/build.gradle
@@ -130,7 +130,7 @@ test {
 }
 
 task installDependencies(type: Exec, description: 'Installs Yarn dependencies.') {
-  commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', 'install', '> /dev/null'
+  commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', 'add', '> /dev/null'
 }
 
 task checkDependenciesIntegrity(type: Exec, description: 'Checks integrity of Yarn dependencies.') {
