--- a/build.gradle
+++ b/build.gradle
@@ -130,11 +130,11 @@ test {
 }
 
 task installDependencies(type: Exec, description: 'Installs Yarn dependencies.') {
-  commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', 'add', '> /dev/null'
+  commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', 'add'
 }
 
 task checkDependenciesIntegrity(type: Exec, description: 'Checks integrity of Yarn dependencies.') {
-  commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', 'check', '--integrity', '> /dev/null'
+  commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', 'check', '--integrity'
 }
 
 task awaitApplicationReadiness(type: Exec, description: 'Awaits until application is ready.') {
