CIV-0000 Changing URL to aat.platform.hmcts.net

--- a/charts/civil-camunda/values.aat.template.yaml
+++ b/charts/civil-camunda/values.aat.template.yaml
@@ -6,7 +6,7 @@ java:
   aadIdentityName: civil
   image: 'hmctspublic.azurecr.io/civil/service:latest'
   imagePullPolicy: Always
-  ingressHost: ${SERVICE_NAME}.aat.platform.hmcts.net
+  ingressHost: ${SERVICE_FQDN}
   keyVaults:
     civil:
       resourceGroup: civil
