--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -169,6 +169,8 @@ ccd:
     java:
       imagePullPolicy: Always
       devcpuRequests: 500m
+      devmemoryRequests: 512Mi
+      devmemoryLimits: 1Gi
       environment:
         CASE_DOCUMENT_AM_API_ATTACH_DOCUMENT_ENABLED: false
         DATA_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
