Camunda Deployments from separate Camunda Process repo and tenant id civil's

--- a/build.gradle
+++ b/build.gradle
@@ -129,13 +129,7 @@ test {
   failFast = true
 }
 
-task installDependencies(type: Exec, description: 'Installs Yarn dependencies.') {
-  commandLine '/usr/bin/yarn', '--mutex', 'network', '--immutable', '--silent', 'install'
-}
 
-task checkDependenciesIntegrity(type: Exec, description: 'Checks integrity of Yarn dependencies.') {
-  commandLine '/usr/bin/yarn', '--mutex', 'network', '--immutable', '--silent', 'check', '--integrity'
-}
 
 task awaitApplicationReadiness(type: Exec, description: 'Awaits until application is ready.') {
   commandLine './bin/wait-for.sh', System.env.URL
@@ -157,7 +151,7 @@ task runSdoApiTests(type: Exec, description: 'Runs SDO functional tests.') {
 }
 
 task runSmokeTests(type: Exec, description: 'Runs smoke tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:smoke'
+  commandLine '/usr/bin/yarn', '--silent', 'run', 'test:smoke'
 }
 
 task runDJTests(type: Exec, description: 'Runs DJ Api functional tests.') {
