--- a/build.gradle
+++ b/build.gradle
@@ -140,14 +140,14 @@ task runCosTests(type: Exec, description: 'Runs DJ Api functional tests.') {
   onlyIf {
     return System.env.ENVIRONMENT == 'preview'
   }
-  commandLine '/usr/bin/yarn', '--silent', 'test:api-cos'
+  commandLine '/usr/bin/yarn', '--silent', 'run', 'test:api-cos'
 }
 
 task runSdoApiTests(type: Exec, description: 'Runs SDO functional tests.') {
   onlyIf {
     return System.env.ENVIRONMENT == 'preview'
   }
-  commandLine '/usr/bin/yarn', '--silent', 'test:api-sdo'
+  commandLine '/usr/bin/yarn', '--silent', 'run', 'test:api-sdo'
 }
 
 task runSmokeTests(type: Exec, description: 'Runs smoke tests.') {
@@ -155,24 +155,24 @@ task runSmokeTests(type: Exec, description: 'Runs smoke tests.') {
 }
 
 task runDJTests(type: Exec, description: 'Runs DJ Api functional tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:api-dj'
+  commandLine '/usr/bin/yarn', '--silent', 'run', 'test:api-dj'
 }
 
 task runSpecApiTests(type: Exec, description: 'Runs Spec functional tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:api-spec'
+  commandLine '/usr/bin/yarn', '--silent', 'run', 'test:api-spec'
 }
 
 task runApiTests(type: Exec, description: 'Runs Api functional tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:api-unspec'
+  commandLine '/usr/bin/yarn', '--silent', 'run', 'test:api-unspec'
 }
 
 
 task runRpaHandOffTests(type: Exec, description: 'Runs functional tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:rpa'
+  commandLine '/usr/bin/yarn', '--silent', 'run', 'test:rpa'
 }
 
 task runNightlyMultipartyTests(type: Exec, description: 'Runs additional multiparty nightly tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:nightly-multiparty'
+  commandLine '/usr/bin/yarn', '--silent', 'run', 'test:nightly-multiparty'
 }
 
 def inStrictOrder(Task... tasks) {
@@ -183,12 +183,12 @@ def inStrictOrder(Task... tasks) {
 }
 
 task smoke(description: 'Runs the smoke tests.') {
-  dependsOn(inStrictOrder(awaitApplicationReadiness, installDependencies, checkDependenciesIntegrity, runSmokeTests))
+  dependsOn(inStrictOrder(awaitApplicationReadiness, runSmokeTests))
 }
 
 task functional(description: 'Runs the functional tests.') {
-  dependsOn(inStrictOrder(awaitApplicationReadiness, installDependencies, checkDependenciesIntegrity,
-    runCosTests, runDJTests, runSpecApiTests, runSdoApiTests, runApiTests))
+  dependsOn(inStrictOrder(awaitApplicationReadiness,
+    runCosTests, runDJTests, runSpecApiTests, runSdoApiTests, runApiTests, runNoCTests, runNightlyApiTests))
 }
 
 project.tasks['sonarqube'].dependsOn test, jacocoTestReport
