add hmc enabled variable

--- a/charts/civil-camunda/values.yaml
+++ b/charts/civil-camunda/values.yaml
@@ -18,6 +18,7 @@ java:
     SERVICE_REQUEST_UPDATE: https://civil-camunda-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/service-request-update
     SERVICE_REQUEST_UPDATE_CLAIM_ISSUED: https://civil-camunda-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/service-request-update-claim-issued
     EM_CCD_ORCHESTRATOR_URL: http://em-ccd-orchestrator-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
+    HMC_HEARINGS_SUBSCRIPTION_ENABLED: false
   keyVaults:
     civil:
       resourceGroup: civil
