--- a/charts/civil-camunda/values.aat.template.yaml
+++ b/charts/civil-camunda/values.aat.template.yaml
@@ -72,6 +72,7 @@ java:
     LAUNCH_DARKLY_ENV: camunda-staging
     EM_CCD_ORCHESTRATOR_URL: http://em-ccd-orchestrator-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     RELEASE_REVISION: "{{ .Release.Revision }}"
+    HMC_HEARINGS_SUBSCRIPTION_ENABLED: false
   postgresql:
     enabled: true
     releaseNameOverride: ${SERVICE_NAME}-postgresql
