--- a/build.gradle
+++ b/build.gradle
@@ -244,6 +244,7 @@ dependencies {
   testImplementation libraries.junit5
   testImplementation group: 'org.camunda.bpm.extension.springboot', name: 'camunda-bpm-spring-boot-starter-test', version: '2.2.0'
   testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+    testImplementation 'junit:junit:4.13.1'
 }
 
 
