Cleanup CVE issues

--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,11 @@ allprojects {
       ) {
         entry 'kotlin-reflect'
       }
+
+      dependencySet(group: 'com.squareup.okio', version: '3.4.0') {
+        entry 'okio-jvm'
+      }
+
     }
     imports {
       mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2021.0.6'
