Upgrading java version

--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,11 @@ version = '0.0.1'
 
 allprojects {
 
-  sourceCompatibility = '17'
-  targetCompatibility = '17'
+  java {
+    toolchain {
+      languageVersion = JavaLanguageVersion.of(17)
+    }
+  }
 
   apply plugin: 'java'
   apply plugin: 'jacoco'
@@ -30,7 +33,7 @@ allprojects {
 
   jacoco {
     toolVersion = '0.8.10' // jacocoMavenPluginVersion
-    reportsDir = file("$buildDir/reports/jacoco")
+    reportsDirectory = file("$buildDir/reports/jacoco")
   }
 
 // before committing a change, make sure task still works
