--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@ plugins {
   id 'application'
   id 'checkstyle'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.0.14.RELEASE'
+  id 'io.spring.dependency-management' version '1.0.12.RELEASE'
+//  id 'org.springframework.boot' version '2.5.14'
   id 'org.owasp.dependencycheck' version '8.2.1'
-  id 'com.github.ben-manes.versions' version '0.39.0'
+  id 'com.github.ben-manes.versions' version '0.47.0'
   id 'org.sonarqube' version '3.4.0.2513'
 }
 
@@ -12,9 +13,11 @@ group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
 
 allprojects {
-
-  sourceCompatibility = '11'
-  targetCompatibility = '11'
+  java {
+    toolchain {
+      languageVersion = JavaLanguageVersion.of(17)
+    }
+  }
 
   apply plugin: 'java'
   apply plugin: 'jacoco'
@@ -24,13 +27,13 @@ allprojects {
 
   checkstyle {
     maxWarnings = 0
-    toolVersion = '8.29'
+    toolVersion = '10.4'
     getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
   }
 
   jacoco {
-    toolVersion = '0.8.5' // jacocoMavenPluginVersion
-    reportsDir = file("$buildDir/reports/jacoco")
+    toolVersion = '0.8.8' // jacocoMavenPluginVersion
+    reportsDirectory = file("$buildDir/reports/jacoco")
   }
 
 // before committing a change, make sure task still works
@@ -104,17 +107,11 @@ allprojects {
 
   repositories {
     mavenLocal()
-    jcenter()
     mavenCentral()
     maven {
-      url "https://dl.bintray.com/hmcts/hmcts-maven"
+      url "https://jitpack.io"
     }
-    maven {
-      url  "http://repo.spring.io/milestone"
-    }
-    maven {
-      url  "https://repo.spring.io/libs-milestone"
-    }
+    jcenter()
   }
 }
 
@@ -135,8 +132,8 @@ test {
 }
 
 task awaitApplicationReadiness(type: Exec, description: 'Awaits until application is ready.') {
-  commandLine './bin/wait-for.sh', System.env.URL
-  commandLine './bin/wait-for.sh', System.env.TEST_URL
+  commandLine './bin/wait-for.sh', System.getenv('URL') ?: 'https://localhost:4100'
+  commandLine './bin/wait-for.sh', System.getenv('TEST_URL')?: 'https://localhost:4100'
 }
 
 task runCosTests(type: Exec, description: 'Runs DJ Api functional tests.') {
