--- a/build.gradle
+++ b/build.gradle
@@ -96,7 +96,7 @@ allprojects {
       }
 
       dependencySet(group: 'com.squareup.okio', version: '3.4.0') {
-        entry 'okio'
+        entry 'okio-jvm'
       }
 
     }
