--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
   id 'application'
   id 'checkstyle'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.1.0'
+  id 'io.spring.dependency-management' version '1.0.12.RELEASE'
 //  id 'org.springframework.boot' version '2.5.14'
   id 'org.owasp.dependencycheck' version '8.2.1'
   id 'com.github.ben-manes.versions' version '0.47.0'
@@ -95,8 +95,8 @@ allprojects {
         entry 'kotlin-reflect'
       }
 
-      dependencySet(group: 'com.squareup.okio', version: '3.5.0') {
-        entry 'okio-jvm'
+      dependencySet(group: 'com.squareup.okio', version: '3.4.0') {
+        entry 'okio'
       }
 
     }
