--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -30,6 +30,9 @@ java:
         - robotics-notification-multipartyrecipient
         - ordnance-survey-api-key
         - notification-caseworker-spec-receiver
+        - default-password
+        - judge-default-password
+        - iac-default-password
   environment:
     IDAM_CLIENT_ID: civil-service
     IDAM_CLIENT_REDIRECT_URI: https://civil-camunda-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/oauth2/callback
