--- a/charts/civil-camunda/Chart.yaml
+++ b/charts/civil-camunda/Chart.yaml
@@ -27,3 +27,7 @@ dependencies:
     version: 0.0.28
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: camunda-bpm.enabled
+  - name: aac-manage-case-assignment
+    version: ~0.2.9
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: aac-manage-case-assignment.enabled
