--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -249,8 +249,8 @@ aac-manage-case-assignment:
       MCA_DS_PROXY_URLS_ALLOWED_LIST: /searchCases.*,/internal/searchCases.*,/internal/cases.*
       MCA_DEF_STORE_PROXY_URLS_ALLOWED_LIST: /api/display/challenge-questions.*
       MANAGE_CASE_S2S_AUTHORISED_SERVICES: xui_webapp,ccd_data,fpl_case_service,divorce_frontend,divorce_ccd_submission,finrem_case_orchestration,civil_service
-      CCD_DATA_STORE_API_BASE_URL: http://ccd-data-store-api-${SERVICE_NAME}
-      CCD_DEFINITION_STORE_API_BASE_URL: http://ccd-definition-store-${SERVICE_NAME}
+      CCD_DATA_STORE_API_BASE_URL: http://ccd-data-store-api-${SERVICE_NAME}.preview.platform.hmcts.net
+      CCD_DEFINITION_STORE_API_BASE_URL: http://ccd-definition-store-${SERVICE_NAME}.preview.platform.hmcts.net
       PRD_HOST: http://rd-professional-api-aat.service.core-compute-aat.internal
     autoscaling:
       enabled: false
