adding aac service api url

--- a/charts/civil-camunda/values.aat.template.yaml
+++ b/charts/civil-camunda/values.aat.template.yaml
@@ -76,6 +76,7 @@ java:
     EM_CCD_ORCHESTRATOR_URL: http://em-ccd-orchestrator-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     RELEASE_REVISION: "{{ .Release.Revision }}"
     HMC_HEARINGS_SUBSCRIPTION_ENABLED: false
+    ACA_SERVICE_API_BASEURL: http://${SERVICE_NAME}-aac-manage-case-assignment
   postgresql:
     enabled: true
     releaseNameOverride: ${SERVICE_NAME}-postgresql
