--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -76,6 +76,7 @@ java:
     SERVICE_REQUEST_UPDATE: https://${SERVICE_FQDN}/service-request-update
     SERVICE_REQUEST_UPDATE_CLAIM_ISSUED: https://${SERVICE_FQDN}/service-request-update-claim-issued
     HMC_HEARINGS_SUBSCRIPTION_ENABLED: false
+    ACA_SERVICE_API_BASEURL: http://${SERVICE_NAME}-aac-manage-case-assignment
   postgresql:
     enabled: true
     releaseNameOverride: ${SERVICE_NAME}-postgresql
