Adding S2S auth services

--- a/charts/civil-camunda/values.yaml
+++ b/charts/civil-camunda/values.yaml
@@ -19,6 +19,7 @@ java:
     SERVICE_REQUEST_UPDATE_CLAIM_ISSUED: https://civil-camunda-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/service-request-update-claim-issued
     EM_CCD_ORCHESTRATOR_URL: http://em-ccd-orchestrator-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     HMC_HEARINGS_SUBSCRIPTION_ENABLED: false
+    CIVIL_S2S_AUTHORISED_SERVICES: payment_app,ccd_data,civil_service,civil-citizen-ui
   keyVaults:
     civil:
       resourceGroup: civil
