--- a/charts/civil-camunda/values.aat.template.yaml
+++ b/charts/civil-camunda/values.aat.template.yaml
@@ -11,28 +11,56 @@ java:
     civil:
       resourceGroup: civil
       secrets:
-        - civil-idam-client-secret
-        - microservicekey-civil-service
-        - system-update-user-username
-        - system-update-user-password
-        - cross-access-user-username
-        - cross-access-user-password
-        - prd-admin-user-username
-        - prd-admin-user-password
-        - AppInsightsInstrumentationKey
-        - docmosis-api-key
-        - gov-notify-api-key
-        - sendgrid-api-key
-        - robotics-notification-sender
-        - robotics-notification-recipient
-        - robotics-notification-recipient-spec
-        - launch-darkly-sdk-key
-        - robotics-notification-multipartyrecipient
-        - notification-caseworker-spec-receiver
-        - ordnance-survey-api-key
-        - default-password
-        - judge-default-password
-        - iac-default-password
+        - name: civil-idam-client-secret
+          alias: idam.client.secret
+        - name: microservicekey-civil-service
+          alias: idam.s2s-auth.totp_secret
+        - name: system-update-user-username
+          alias: CIVIL_SYSTEM_UPDATE_USERNAME
+        - name: system-update-user-password
+          alias: CIVIL_SYSTEM_UPDATE_PASSWORD
+        - name: cross-access-user-username
+          alias: CIVIL_CROSS_ACCESS_USERNAME
+        - name: cross-access-user-password
+          alias: CIVIL_CROSS_ACCESS_PASSWORD
+        - name: prd-admin-user-username
+          alias: CIVIL_PRD_ADMIN_USERNAME
+        - name: prd-admin-user-password
+          alias: CIVIL_PRD_ADMIN_PASSWORD
+        - name: appinsights-connection-string
+          alias: appinsights-connection-string
+        - name: AppInsightsInstrumentationKey
+          alias: azure.application-insights.instrumentation-key
+        - name: docmosis-api-key
+          alias: docmosis.tornado.key
+        - name: cmc-db-password-v11
+          alias: CMC_DB_PASSWORD
+        - name: gov-notify-api-key
+          alias: GOV_NOTIFY_API_KEY
+        - name: sendgrid-api-key
+          alias: SENDGRID_API_KEY
+        - name: robotics-notification-sender
+          alias: robotics.notification.sender
+        - name: robotics-notification-recipient
+          alias: robotics.notification.recipient
+        - name: launch-darkly-sdk-key
+          alias: LAUNCH_DARKLY_SDK_KEY
+        - name: robotics-notification-multipartyrecipient
+          alias: robotics.notification.multipartyrecipient
+        - name: robotics-notification-recipient-spec
+          alias: robotics.notification.specRecipient
+        - name: robotics-notification-recipient-lipj
+          alias: robotics.notification.lipJRecipient
+        - name: ordnance-survey-api-key
+          alias: OS_POSTCODE_LOOKUP_API_KEY
+        - name: notification-caseworker-spec-receiver
+          alias: notification.caseworker.spec.receiver
+        - name: mediation-notification-sender
+          alias: mediation.emails.sender
+        - name: mediation-notification-recipient
+          alias: mediation.emails.recipient
+        - name: hmc-servicebus-shared-access-key-tf
+          alias: HMC_HEARINGS_TOPIC_ACCESS_KEY
   environment:
     IDAM_CLIENT_ID: civil-service
     IDAM_CLIENT_REDIRECT_URI: https://civil-camunda-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/oauth2/callback
