changes to renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -19,5 +19,21 @@
       ]
     }
   ],
-  "prConcurrentLimit": 20
+  "packageRules": [
+    {
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "matchUpdateTypes": [
+        "minor",
+        "patch"
+      ],
+      "groupName": "all non-major dependencies",
+      "groupSlug": "all-minor-patch",
+      "automerge": true
+    }
+  ],
+  "schedule": ["after 5pm on monday"],
+  "prConcurrentLimit": 10,
+  "rebaseWhen": "conflicted"
 }
