--- a/build.gradle
+++ b/build.gradle
@@ -137,6 +137,9 @@ task awaitApplicationReadiness(type: Exec, description: 'Awaits until applicatio
 }
 
 task runProdApiTests(type: Exec, description: 'Runs Prod features in functional tests.') {
+  onlyIf {
+    return System.env.ENVIRONMENT == 'aat'
+  }
   commandLine '/usr/bin/yarn', '--silent', 'run', 'test:api-prod'
 }
 
