pointing to master and increasing civil service memory

--- a/charts/civil-camunda/values.aat.template.yaml
+++ b/charts/civil-camunda/values.aat.template.yaml
@@ -7,6 +7,9 @@ java:
   image: 'hmctspublic.azurecr.io/civil/service:latest'
   imagePullPolicy: Always
   ingressHost: ${SERVICE_FQDN}
+  devcpuRequests: 500m
+  devmemoryRequests: 2048Mi
+  devmemoryLimits: 4096Mi
   keyVaults:
     civil:
       resourceGroup: civil
