--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -3,9 +3,12 @@ tags:
 
 java:
   applicationPort: 4000
-  image: 'hmctspublic.azurecr.io/civil/service:pr-4134'
+  image: 'hmctspublic.azurecr.io/civil/service:latest'
   imagePullPolicy: Always
   ingressHost: ${SERVICE_NAME}.preview.platform.hmcts.net
+  devcpuRequests: 500m
+  devmemoryRequests: 2048Mi
+  devmemoryLimits: 4096Mi
   keyVaults:
     civil:
       resourceGroup: civil
