--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -6,6 +6,9 @@ java:
   image: 'hmctspublic.azurecr.io/civil/service:latest'
   imagePullPolicy: Always
   ingressHost: ${SERVICE_NAME}.preview.platform.hmcts.net
+  devcpuRequests: 500m
+  devmemoryRequests: 2048Mi
+  devmemoryLimits: 4096Mi
   keyVaults:
     civil:
       resourceGroup: civil
