--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -211,6 +211,7 @@ ccd:
       devcpuRequests: 500m
       devmemoryRequests: 2048Mi
       devmemoryLimits: 4096Mi
+      image: hmctspublic.azurecr.io/ccd/data-store-api:latest
       environment:
         CASE_DOCUMENT_AM_API_ATTACH_DOCUMENT_ENABLED: false
         DATA_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
@@ -238,6 +239,7 @@ ccd:
       devmemoryRequests: 512Mi
       devcpuLimits: 2
       devmemoryLimits: 1Gi
+      image: hmctspublic.azurecr.io/ccd/definition-store-api:latest
       environment:
         DEFINITION_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
         DEFINITION_STORE_IDAM_KEY: ${CCD_DEFINITION_STORE_S2S_SECRET}
