--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -239,6 +239,8 @@ ccd:
       devcpuLimits: 2
       devmemoryLimits: 1Gi
       environment:
+        APPLICATION_LOGGING_LEVEL: BEBUG
+        SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT: 90000
         DEFINITION_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
         DEFINITION_STORE_IDAM_KEY: ${CCD_DEFINITION_STORE_S2S_SECRET}
         IDAM_USER_URL: https://idam-web-public.aat.platform.hmcts.net
