--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -239,7 +239,7 @@ ccd:
       devcpuLimits: 2
       devmemoryLimits: 1Gi
       environment:
-        APPLICATION_LOGGING_LEVEL: BEBUG
+        APPLICATION_LOGGING_LEVEL: DEBUG
         SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT: 90000
         DEFINITION_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
         DEFINITION_STORE_IDAM_KEY: ${CCD_DEFINITION_STORE_S2S_SECRET}
