--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -1,6 +1,10 @@
 tags:
   civil-ccd-stack: true
 
+spring:
+  transaction:
+    default-timeout: 180
+
 java:
   applicationPort: 4000
   image: 'hmctspublic.azurecr.io/civil/service:latest'
