--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -19,6 +19,6 @@ jobs:
         cmd: >
           for file in src/main/resources/camunda/*.bpmn;
           do
-            echo "Checking $file";
+            echo "$file";
             yq -oy -e -p xml '.definitions.process.+@name' "$file" && exit 1;
           done
