--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -20,5 +20,5 @@ jobs:
           for file in src/main/resources/camunda/*.bpmn;
           do
             echo "$file";
-            yq -oy -e -p xml '.definitions.process.+@name' "$file" || exit 1;
+            yq -oy -e -p xml '.definitions.process.+@name' "$file" || (echo "Failure in $file" && exit 1);
           done
