--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -19,10 +19,9 @@ jobs:
         cmd: >
           for file in src/main/resources/camunda/*.bpmn;
           do
-            echo "$file";
             if ! yq -oy -e -p xml '.definitions.process.+@name' "$file";
             then
-              echo "Process $file does not have a name";
+              echo "Process $file does not have a name" >&2;
               exit 1;
             fi;
           done
