--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -106,7 +106,7 @@ java:
     CMC_DB_USERNAME: "{{ .Values.postgresql.auth.username}}"
     CMC_DB_PASSWORD: "{{ .Values.postgresql.auth.password}}"
     REFERENCE_DATABASE_MIGRATION: true
-    CAMUDA_URL: http://${SERVICE_NAME}-camunda/engine-rest/
+    CAMUNDA_URL: http://${SERVICE_NAME}-camunda/engine-rest/
     STITCHING_API_ENABLED: false
     POLLING_EVENT_EMITTER_ENABLED: false
     SERVICE_REQUEST_UPDATE: https://${SERVICE_FQDN}/service-request-update
