--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,41 @@ allprojects {
         entry 'okio'
       }
 
+      // Solves CVE-2023-20861
+      dependencySet(group: 'org.springframework', version: '6.0.3'){
+        entry 'spring-aop'
+        entry 'spring-expression'
+        entry 'spring-context'
+      }
+
+      // Solves CVE-2023-20883
+      dependencySet(group: 'org.springframework.boot', version: '2.7.18'){
+        entry 'spring-boot-autoconfigure'
+        entry 'spring-boot-starter'
+        entry 'spring-boot-starter-aop'
+        entry 'spring-boot-starter-logging'
+      }
+
+      //Solves CVE-2023-0833
+      dependency group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.2'
+
+      //Solves CVE-2023-6378
+      dependencySet(group: 'ch.qos.logback', version: '1.4.14'){
+        entry 'logback-classic'
+        entry 'logback-core'
+      }
+
+      //Solves CVE-2023-35116
+      dependencySet(group: 'com.fasterxml.jackson.core', version: '2.17.0') {
+        entry 'jackson-databind'
+        entry 'jackson-core'
+        entry 'jackson-annotations'
+      }
+
+      //Solves CVE-2023-24998
+      dependency group: 'commons-fileupload', name: 'commons-fileupload', version: '1.5'
+
+
     }
     imports {
       mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2021.0.6'
@@ -216,8 +251,8 @@ ext.libraries = [
 ]
 
 dependencies {
-  implementation group: 'org.springframework', name: 'spring-core', version: '5.3.27'
-  implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.27'
+  implementation group: 'org.springframework', name: 'spring-core', version: '6.0.3'
+  implementation group: 'org.springframework', name: 'spring-beans', version: '6.0.3'
   implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.18.0'
   implementation group: 'org.camunda.bpm.extension.rest', name: 'camunda-rest-client-spring-boot-starter', version: '0.0.6'
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
