--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,8 @@ allprojects {
 
       dependency group: 'commons-io', name: 'commons-io', version: '2.10.0'
       dependency group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.8.7'
+      //Solves CVE-2023-33202
+      dependency group: 'org.springframework.security', name: 'spring-security-rsa', version: '1.1.1'
 
       dependencySet(
         group: 'org.camunda.bpm',
@@ -80,7 +82,6 @@ allprojects {
         entry 'kotlin-stdlib-common'
         entry 'kotlin-stdlib'
         entry 'kotlin-reflect'
-
       }
 
       dependencySet(group: 'com.squareup.okio', version: '3.4.0') {
