--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,10 @@ allprojects {
       dependency group: 'commons-io', name: 'commons-io', version: '2.10.0'
       dependency group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.8.7'
 
+      //Solves CVE-2023-33202
+      dependency group: 'org.springframework.security', name: 'spring-security-rsa', version: '1.1.1'
+
+
       dependencySet(
         group: 'org.camunda.bpm',
         version: '7.18.0'
